--- a/angularapp/src/app/components/adminside/addgifts/addgifts.component.html
+++ b/angularapp/src/app/components/adminside/addgifts/addgifts.component.html
@@ -114,7 +114,7 @@
         <a class="navbar-brand fa fa-search" href="../theme" id="adminThemes">Themes</a>
         <a class="navbar-brand fa fa-comments" href="../admin-review">Customers Feedback</a>
         <a class="navbar-brand fa fa-shopping-cart" href="../order" id="adminOrders">Orders</a>
-        <a class="navbar-brand" href="../admin">Logout</a>
+        <a class="navbar-brand" href="../logout">Logout</a>
   </nav>
     </div>
   </header><br>
