--- a/angularapp/src/app/components/adminside/edit/edit.component.css
+++ b/angularapp/src/app/components/adminside/edit/edit.component.css
@@ -1,13 +1,22 @@
+.navbar-custom{
+    background-color: #D4AF37;
+}
 .box{
     width:50%;
     border:1px solid black;
     border-radius:25px;
     padding:0px 20px 20px 20px;
     margin-left:300px;
-}
-.head{
-    background-color:#D4AF37;
-}
-.box{
     background-color: #D4AF37;
+}
+h1{
+    text-align: center;
+  }
+.center{
+    text-align: center;
+    width:500px;
+}
+.container{
+    margin-top: 5%;
+    
 }
