--- a/angularapp/src/app/components/adminside/adminhomepage/adminhomepage.component.html
+++ b/angularapp/src/app/components/adminside/adminhomepage/adminhomepage.component.html
@@ -14,122 +14,38 @@
 <br>
 <div class="main-content">
     <div class="container-fluid">
-        <div class="row">
-            <div class="col-md-12">
-                <div class="card card-plain">
-                  <div class="card card-nav-tabs">
-                      <div class="card-header">
-                        <div class="text-center"><h3><u>LIST OF USERS</u></h3></div>
-                      </div>
-                    </div>
-                    <div class="card-body">
-                        <div class="table-responsive">
-                            <table class="table table-hover">
-                                <thead class="">
-                                    <th>
-                                        User Name
-                                    </th>
-                                    <th>
-                                        Name
-                                    </th>
-                                    <th>
-                                        E-Mail
-                                    </th>
-                                    <th>
-                                        Phone Number
-                                    </th>
-                                </thead>
-                                <tbody>
-                                    <tr>
-                                        <td>
-                                            Rice
-                                        </td>
-                                        <td>
-                                            Dakota Rice
-                                        </td>
-                                        <td>
-                                          Dakota@gmail.com
-                                        </td>
-                                        <td>
-                                            12345
-                                        </td>
-                                    </tr>
-                                    <tr>
-                                        <td>
-                                          Hooper
-                                        </td>
-                                        <td>
-                                            Minerva Hooper
-                                        </td>
-                                        <td>
-                                          Minerva@gmail.com
-                                        </td>
-                                        <td>
-                                            67890
-                                        </td>
-                                    </tr>
-                                    <tr>
-                                        <td>
-                                          Rodriguez
-                                        </td>
-                                        <td>
-                                            Sage Rodriguez
-                                        </td>
-                                        <td>
-                                          Sage@gmail.com
-                                        </td>
-                                        <td>
-                                            23456
-                                        </td>
-                                    </tr>
-                                    <tr>
-                                        <td>
-                                          Chaney
-                                        </td>
-                                        <td>
-                                            Philip Chaney
-                                        </td>
-                                        <td>
-                                          Philip@gmail.com
-                                        </td>
-                                        <td>
-                                            34567
-                                        </td>
-                                    </tr>
-                                    <tr>
-                                        <td>
-                                          Greene
-                                        </td>
-                                        <td>
-                                            Doris Greene
-                                        </td>
-                                        <td>
-                                          Doris@gmail.com
-                                        </td>
-                                        <td>
-                                            56789
-                                        </td>
-                                    </tr>
-                                    <tr>
-                                        <td>
-                                          Porter
-                                        </td>
-                                        <td>
-                                            Mason Porter
-                                        </td>
-                                        <td>
-                                          Mason@gmail.com
-                                        </td>
-                                        <td>
-                                            98765
-                                        </td>
-                                    </tr>
-                                </tbody>
-                            </table>
-                        </div>
-                    </div>
-                </div>
+      <div class="row">
+        <div class="col-md-12">
+          <div class="card card-plain">
+            <div class="card card-nav-tabs">
+              <div class="card-header">
+                <div class="text-center"><h3><u>LIST OF USERS</u></h3></div>
+              </div>
             </div>
+            <div class="card-body">
+              <div class="table-responsive">
+                <table class="table table-hover">
+                  <thead>
+                    <tr>
+                      <th>Name</th>
+                      <th>Email</th>
+                      <th>PhoneNumber</th>
+                    </tr>
+                  </thead>
+                  <tbody>
+                    <ng-container *ngFor="let user of users">
+                      <tr>
+                        <td>{{ user.name }}</td>
+                        <td>{{ user.email }}</td>
+                        <td>{{ user.phonenumber }}</td>
+                      </tr>
+                    </ng-container>
+                  </tbody>
+                </table>
+              </div>
+            </div>
+          </div>
         </div>
-    </div>
-  </div>
+      </div>
+    </div>
+  </div>
